# TorFast

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.baka  a_1.txt  a_2.txt  a_3.txt  a_4.txt  a_5.txt  comvined.yaml  crawler-dep.yaml  docker-compose.yml  elasrtic-dep.yaml  elastic-ser.yaml  extractor.py  new_urls.txt  output_file.txt  redis-dep.yaml  run_with_input.sh  urls.txt  version: '3.txt  x.py
src/: crawler.rs  fetcher.rs  main.rs  parser.rs  parser2.rs  poster.rs
src/readable_code/: crawler.rs  fetcher.rs  main.rs  parser.rs  poster.rs
src/test/: fetcher_test.rs  mod.rs  parser_tests.rs  poster_test.rs
src/tests/: fetcher_test.rs  mod.rs  parser_test.rs
website/: gui.py  index.html  script.js  styles.css
