[package]
name = "crawle-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastbloom = "0.7.1"
html5ever = "0.27.0"
lol_html = "1.2.1"
markup5ever_rcdom = "0.3.0"
reqwest = { version = "0.12.4", features = ["json", "socks"] }
tendril = "0.4.3"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
wiremock = "0.6.0"
